Step-by-step instructions for extracting session id

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -61,7 +61,27 @@ Since we don't know how to change this encrypted value to say store the appropri
 ## Node Package Manager
 First, you'll want to get an understanding of Node packages and modules.  Node packages allow you to make use of code that other people have written in your application.  For example, the [date-fns package](https://www.npmjs.com/package/date-fns) contains a function that allows you to get the number of years, months, hours, minutes, and seconds between two dates via the function [intervalToDuration](https://date-fns.org/v2.29.1/docs/intervalToDuration#examples).  NPM (Node Package Manager: https://www.tutorialspoint.com/nodejs/nodejs_npm.htm) maintains a searchable list of published packages that you can use in your code by including them in the package.json file.  Then you will be able to install them all by using `npm install` in the directory containing this file, or you can install individual packages like `date-fns` with `npm install date-fns`, which will add it to your package.json file.  If you create something useful that other people can use in their projects, you can even publish your own package on NPM!
 
-You may hear the terms package and module used interchangably, but generally, a package will consist of a group of related modules (which might only be one) and that "is described by a `package.json` file."  A module is anything you can include with `require`.  See: https://stackoverflow.com/questions/20008442/difference-between-a-module-and-a-package-in-node-js and https://docs.npmjs.com/about-packages-and-modules).  `date-fns` can be considered a package or a module whose functionality can be used with `require('date-fns')`.  When you require it like that, you are usually getting all of the functionality, which will sometimes be present in the `index.__ file` of the repository or its `src` (source files) directory linked to on NPM (https://github.com/date-fns/date-fns/tree/main/src).  But packages like `date-fns` can be a directory and in that case you can include specific files if you don't need all of the functions it provides.  For example, you can use `require('date-fns/intervalToDuration')` if you only needed that function (https://github.com/date-fns/date-fns/tree/main/src/intervalToDuration).  For this particular example, it'll use the `index.ts` file of the `intervalToDuration` folder.  You can get some hands-on experience using package.json here: https://www.freecodecamp.org/learn/back-end-development-and-apis/#managing-packages-with-npm .  
+You may hear the terms package and module used interchangably, but generally, a package will consist of a group of related modules (which might only be one) and that "is described by a `package.json` file."  A module is anything you can include with `require`.  See: https://stackoverflow.com/questions/20008442/difference-between-a-module-and-a-package-in-node-js and https://docs.npmjs.com/about-packages-and-modules).  `date-fns` can be considered a package or a module whose functionality can be used with `require('date-fns')`.  When you require it like that, you are usually getting all of the functionality, which will sometimes be present in the `index.__ file` of the repository or its `src` (source files) directory linked to on NPM (https://github.com/date-fns/date-fns/tree/main/src).  But packages like `date-fns` can be a directory and in that case you can include specific files if you don't need all of the functions it provides.  For example, you can use `require('date-fns/intervalToDuration')` if you only needed that function (https://github.com/date-fns/date-fns/tree/main/src/intervalToDuration).  For this particular example, it'll use the `index.ts` file of the `intervalToDuration` folder.  You can get some hands-on experience using package.json here: https://www.freecodecamp.org/learn/back-end-development-and-apis/#managing-packages-with-npm .
+
+## Objects
+
+In JavaScript, objects (See https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Working_with_Objects and https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Objects/Basics.) are a collection of key-value pairs called properties where the key is always a string, but the value can be anything. So for example, the following defines an object with the property keys `foo` and `bar` with the numerical value of `42` and a function that logs the sum of its two inputs, respectively.
+```
+const obj = {foo: 42, bar: (a, b) => console.log(a + b)};
+```
+If the key is something that can be a variable name, we can use dot notation to access the corresponding value. So, `obj.foo` will be `42`. Alternatively, we could use bracket notation, which is required when the key is not a valid variable name, e.g., something with a hyphen. We can also use it here, so `obj['foo']` would also be 42. Note that you need to use single or double quotes around the key as otherwise it'd look for the value of the variable `foo` when determining the key to use. To get the other value, you could use `obj.bar`, which would give you back a function. What do you think `obj.bar(1, 2)` would be? The value of an object property can even be another object itself in which case you can chaining to access the property values of property values:
+```
+const obj = {
+  foo: {
+    a: 42,
+    b: {
+      c: "bar"
+    }
+  }
+};
+console.log(foo.x); // logs 42
+console.log(foo.b.c); // logs "bar"
+```
 
 ## Getting started and the initial request to get the session cookie/browser refresh key
 You can install `node` on your computer, but if you want to get to completing the tasks quickly, you can use `replit.com`.  If you haven't already, sign up for a GitHub account at https://www.github.com .  Then go to https://replit.com/languages/nodejs .  When asked to sign in, you can do so with your GitHub account.  After doing so, click the "Create Repl" button:
@@ -71,7 +91,7 @@ After doing so (perhaps first changing the title to something more memorable), y
 
 ![image](https://user-images.githubusercontent.com/9159008/184059843-f67c4c13-1958-465d-b544-2b4f03619e48.png)
 
-To get the needed information for this step, we will be using two node packages: [axios](https://www.npmjs.com/package/axios) to make the requests to LionsDen Course Search and get the responses and [Fast HTML Parser](https://www.npmjs.com/package/node-html-parser) (node-html-parser).  As noted earlier, you should user `require('module name')` and store the result in a variable, usually the same name, except removing `-` signs and using camel case instead.  In JavaScript, variable names can't have hyphens although they can have underscores (`_`).  If you go through the tutorials at https://www.freecodecamp.org/learn/back-end-development-and-apis/#managing-packages-with-npm , you'll see that you need to add these dependencies to the `package.json` file.  You can do this manually, or in Replit.com, you can click on the Packager icon: 
+To get the needed information for this step, we will be using two node packages: [axios](https://www.npmjs.com/package/axios) to make the requests to LionsDen Course Search and get the response header with the session cookie and the response body HTML with the browser refresh key, and [Fast HTML Parser](https://www.npmjs.com/package/node-html-parser) (node-html-parser) to extract the browser refresh key from the HTML.  As noted earlier, you should user `require('module name')` and store the result in a variable, usually the same name, except removing `-` signs and using camel case instead.  In JavaScript, variable names can't have hyphens although they can have underscores (`_`).  If you go through the tutorials at https://www.freecodecamp.org/learn/back-end-development-and-apis/#managing-packages-with-npm , you'll see that you need to add these dependencies to the `package.json` file.  You can do this manually, or in Replit.com, you can click on the Packager icon: 
 
 ![image](https://user-images.githubusercontent.com/9159008/184060817-29b6d418-5c8f-4d68-89bc-651e2499696d.png)
 
@@ -104,9 +124,11 @@ With `return response`:
 
 ![image](https://user-images.githubusercontent.com/9159008/184639109-743f2732-bffd-4e99-a9be-c610aa164210.png)
 
-This is because when you are declaring a `function` to be `async`, you are saying to the function I have other stuff to do so just ping me with your result when you're done and I'll do something with it when I'm ready.  This is what it means for the code to run `asyn`chronously.  The alternative is to run the function synchronously, which would mean that you would wait until the function is complete before proceeding.  The reason you don't want to have to wait here is because when you send a request, it could be a little while before you get a response.  If you just stopped everything and waited, the web site would become unresponsive (e.g., clicking on something would have no effect.)  So, instead, when you call (run) a function denoted `async`, anytime you have an `await`, you can leave the function and do other stuff.
+This is because when you are declaring a `function` to be `async`, you are saying to the function I have other stuff to do so just ping me with your result when you're done and I'll do something with it when I'm ready. This is what it means for the code to run `asyn`chronously. The alternative is to run the function synchronously, which would mean that you would wait until the function is complete before proceeding. The reason you don't want to have to wait here is because when you send a request, it could be a little while before you get a response.  If you just stopped everything and waited, the web site would become unresponsive (e.g., clicking on something would have no effect.)  So, instead, when you call (run the code from) a function denoted `async`, you can leave the function and do other stuff while the function is paused waiting for the result from an `await`.
 
-The `Promise` that's returned has a `then` and a `catch`, where you include functions for the what to do with the result after the function completes and what to do with an error if there were a problem.  **NOTE**: The function will run synchronously until the first `await`.  To understand this a little better, consider the following and see if you can figure out what the output will be without running it:
+The mechanism for doing this is using something called `Promise`s, which is what will be returned from a function that's declared to be `async`. A `Promise` is an object that has a `then` and a `catch`, where you include functions for the what to do with the result after the function completes and what to do with an error if there were a problem.  In general, reading from/writing to files or making requests should be done asynchronously since they can be time-consuming operations, and as such when you use these functions, they `return` Promises.  There are however synchronous versions of functions for file reading and writing which just wait until completion, and for file reading, output the text of the file contents instead.
+
+**NOTE**: Although it's prefixed with an `async`, the function will run synchronously until the first `await`.  To understand this a little better, consider the following and see if you can figure out what the output will be without running it:
 
 ```
 async function foo() {
@@ -116,7 +138,21 @@ async function foo() {
   const y = await (x + 1);
   return y;
 }
-
+// Since foo is an async function, calling it like foo() gives back a Promise.
+// As noted earlier a Promise has a `then`, which takes a function as an input
+// and runs this function on successful completion with the return value as the input. 
 foo().then((result) => console.log(result));
 console.log(3);
 ```
+### Extracting the session id cookie from the response header
+
+Now let's modify our function that gets the course data response and logs it in steps:
+
+1. First, have it `return` the `response` and instead of just calling the function, use `then` as we do in the above example to log the `result`.  Run your code and you should still see the response.
+2. Next, modify the function to instead return the value of the `headers` property of the `response` object. If you did it correctly, the output should look something like this:
+
+![image](https://user-images.githubusercontent.com/9159008/185532686-77e5b529-19f9-4703-bc5b-6ab0139a26aa.png)
+
+3. Notice that the value of the `headers` property is also an object. Use chaining to instead return the value of the property containing the `ASP.NET_SessionId`, which will be an `Array`.   
+4. Notice that all the `Array` items are strings with the name of the Cookie appearing before the `=` sign and the value appearing after it but before the semicolon. Use [find](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/find) and [startsWith](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/startsWith) on the Array to get the string starting with `ASP.NET_SessionId=` (Don't assume this will be in the 0th location.) Return this instead of the entire `Array`.
+5. Finally, use `substring` and `indexOf` on the result of step 4 to only `return` the value of the `ASP.NET_SessionId`, which starts after the `=` sign and before the `;`.  In this case, that will be `crccdaemcjv5hgpktvrnwlmz`.  Alternatively, you could get the `0th` item from using `exec` (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp/exec) with the appropriate regular expression. 
