Parsing the HTML and extracting the browser refresh key

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -155,4 +155,28 @@ Now let's modify our function that gets the course data response and logs it in 
 
 3. Notice that the value of the `headers` property is also an object. Use chaining to instead return the value of the property containing the `ASP.NET_SessionId`, which will be an `Array`.   
 4. Notice that all the `Array` items are strings with the name of the Cookie appearing before the `=` sign and the value appearing after it but before the semicolon. Use [find](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/find) and [startsWith](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/startsWith) on the Array to get the string starting with `ASP.NET_SessionId=` (Don't assume this will be in the 0th location.) Return this instead of the entire `Array`.
-5. Finally, use `substring` and `indexOf` on the result of step 4 to only `return` the value of the `ASP.NET_SessionId`, which starts after the `=` sign and before the `;`.  In this case, that will be `crccdaemcjv5hgpktvrnwlmz`.  Alternatively, you could get the `0th` item from using `exec` (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp/exec) with the appropriate regular expression. 
+5. Finally, use `substring` and `indexOf` on the result of step 4 to only `return` the value of the `ASP.NET_SessionId`, which starts after the `=` sign and before the `;`.  In this case, that will be `crccdaemcjv5hgpktvrnwlmz`.  Alternatively, you could get the `1`st item in the Array using `exec` (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp/exec) with the appropriate regular expression, using a [capturing group](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet#:~:text=(x)-,Capturing%20group,-%3A%20Matches%20x):
+    + **Hints if you want to use `exec`**: You want to get what appears between the = and ; so your regular expression should start with an = sign, end with a ;, and use capturing parentheses in between. In between the capturing parentheses, you're looking for one or more characters that don't include a ; so you'll want to use a [quantifier](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet#quantifiers) indicating one or more consecutive characters from a [negated of complemented character set](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet#:~:text=A%20negated%20or%20complemented%20character%20class).
+
+### Parsing the HTML and extracting the browser refresh key
+
+If you inspect the source of https://lionsden.molloy.edu/ICS/Course_Search/Course_Search.jnz?portlet=Course_Schedules&screen=Advanced+Course+Search&screenType=next, you'll notice there's a hidden input with an id of `___BrowserRefresh`:
+
+![image](https://user-images.githubusercontent.com/9159008/185769718-8c014fb0-04ff-4a60-a923-e4d138e0095f.png)
+
+As mentioned earlier, we'll need to get its value, and we can use [Fast HTML Parser](https://www.npmjs.com/package/node-html-parser) (node-html-parser) to do this. This Node package allows you to construct a simplified DOM (Document Object Model) tree from the HTML source code and use methods to get elements and their attributes: 
+
+<div align = "center">
+<a title="‍Birger Eriksson, CC BY-SA 3.0 &lt;https://creativecommons.org/licenses/by-sa/3.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:DOM-model.svg"><img width="256" alt="DOM-model" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/DOM-model.svg/256px-DOM-model.svg.png"></a>
+</div>
+  
+If you click on the above NPM link, you can see how to use the package. If you're interested in looking underneath the hood to see how this is done, there's also a link to the GitHub repository, but this won't be necessary if you just want to use it. So, now instead of `return`ing the session cookie as a string (text), we're going to modify our above function to `return` an `object` with keys of `sessionCookie` and `browserRefreshKey` and values of the session cookie from before and the browser refresh key we're going to show how to get now. Upon completion of this task, your modified output should look something like the following: 
+
+![image](https://user-images.githubusercontent.com/9159008/185772199-17101d60-e032-4012-969d-b4f277a70263.png)
+
+So here are the modifications to make:
+1. First parse `response.data` using the `parse` method of the `nodeHTMLParser` object (https://www.npmjs.com/package/node-html-parser#user-content-parsedata-options), and store it in a variable, say `parseTree`.
+2. Since we'll need to get the browser refresh key in another place as well, we're going to define a function to avoid some code duplication. So, the next step is to define a function named say `getBrowserRefreshKey` that takes a parse tree, also named say `parseTree`, as an input. This function will be an ordinary synchornous one, so do _not_ use `async`.  In this function, call [`getElementById`](https://www.npmjs.com/package/node-html-parser#user-content-nodegetelementbyidid-string-htmlelement) to get the element with the id of `___BrowserRefresh` and then call [`getAttribute`](https://www.npmjs.com/package/node-html-parser#htmlelementgetattributekey-string) on the result, passing the string literal `value` so we can get the value of this input (remember `value` needs to be put in single or double quotes here since you don't want to refer to a variable named `value`). You can use chaining here, which will look like something of the form `a.b().c(___)`. If you use an [arrow function expreession](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions) without the brackets (e.g., `const sum = (a, b) => a + b`), no `return` is needed.
+3. Now go back to the orgininal function. Instead of `return`ing the session id string, `return` an object literal with a key of `sessionCookie` and the value you were previously returning and a key of `browserRefreshKey` and the value of calling this `getBrowserRefreshKey` on `parseTree`.
+
+If you did this correctly, then after running the code, you should see an output like above (with a different session cookie and browser refresh key). 
