More directions up to table headings

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -177,6 +177,17 @@ If you click on the above NPM link, you can see how to use the package. If you'r
 So here are the modifications to make:
 1. First parse `response.data` using the `parse` method of the `nodeHTMLParser` object (https://www.npmjs.com/package/node-html-parser#user-content-parsedata-options), and store it in a variable, say `parseTree`.
 2. Since we'll need to get the browser refresh key in another place as well, we're going to define a function to avoid some code duplication. So, the next step is to define a function named say `getBrowserRefreshKey` that takes a parse tree, also named say `parseTree`, as an input. This function will be an ordinary synchornous one, so do _not_ use `async`.  In this function, call [`getElementById`](https://www.npmjs.com/package/node-html-parser#user-content-nodegetelementbyidid-string-htmlelement) to get the element with the id of `___BrowserRefresh` and then call [`getAttribute`](https://www.npmjs.com/package/node-html-parser#htmlelementgetattributekey-string) on the result, passing the string literal `value` so we can get the value of this input (remember `value` needs to be put in single or double quotes here since you don't want to refer to a variable named `value`). You can use chaining here, which will look like something of the form `a.b().c(___)`. If you use an [arrow function expreession](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions) without the brackets (e.g., `const sum = (a, b) => a + b`), no `return` is needed.
-3. Now go back to the orgininal function. Instead of `return`ing the session id string, `return` an object literal with a key of `sessionCookie` and the value you were previously returning and a key of `browserRefreshKey` and the value of calling this `getBrowserRefreshKey` on `parseTree`.
+3. Now go back to the orginal function. Instead of `return`ing the session id string, `return` an object literal with a key of `sessionCookie` and the value you were previously returning and a key of `browserRefreshKey` and the value of calling this `getBrowserRefreshKey` on `parseTree`.
 
 If you did this correctly, then after running the code, you should see an output like above (with a different session cookie and browser refresh key). 
+
+#### Function to get course data
+
+Now that we have the browser refresh key and session cookie, we can make the needed POST request to get the first page of course data. To do this:
+1. Define an `async` function, say `getCourseData`, that calls the function you defined before to get the session cookie and browser refresh key and stores it in a variable. Since the function is `async`, use `await` here. Since you're returning an object, you may want to look up [destructuring assignment](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment#syntax) which allows you to write one-liners to define multiple variables for each property.
+2. Define a variable `bodyRequestData` whose value is in the above section (https://github.com/jschanker/csc3520-fall2022/edit/main/day1-9-8-22.md#inspection-of-requests-and-responses). Be sure to replace the `browserRefreshKey` to reference the variable that holds this value and remove the subject area CSC as we'll want to get the search results for every area. You might also want to replace `2022;FA` with a variable that holds this value, so it'll be easier to change in the future for other semesters. Look up [template literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals) to see a nice way to combine variable values and string literals without using string concatenation (`+`).
+3. Now make a POST request using axios. This time you'll be using `axios.post` but will need to pass it an object with the relevant properties. `url` is the request url, `data` will be `bodyRequestData`, and you'll also need `headers` which itself will be an object with properties `"content-type" : "multipart/form-data; boundary=----FormBoundary"` (the format of the request body, boundary is the separator between names of inputs and their values) and a property with a key of `cookie` whose value is 'ASP.NET_SessionId=' followed by whatever the session id is. This time, you'll use another `await` for the `axios` call and store it in `response`.
+4. Start by logging the `data` of response to see if it worked. (You'll of course need to call your new `getCourseData` function. If you get the same HTML as with the GET request something went wrong. Otherwise, if you can see some courses listed after a little time, it worked.
+5. The next step is to parse the HTML as we did before to get the browser refresh key. Use the `parse` method of the `nodeHTMLParser` object as you did before.
+6. The relevant data is in the table. Manually make a request for the course data and inspect the course table to see if it has a unique id, so you could use `getElementById` as before.  You can log its `innerHTML` property to see if you get the table of course data.
+7. Next we'll want to get all of the table headings. This will make it so that we know which table cell corresponds to which piece of course data. This is important for making our scraper less fragile. For example, the third column might correspond to the course code now, but if columns are added or removed (as they have been in the past), it may not be that way in the future. To get all of the headings, you'll want to use `querySelectorAll` which will give you this data as an Array.
