Updating scraping directions up to getting table headings

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -186,8 +186,14 @@ If you did this correctly, then after running the code, you should see an output
 Now that we have the browser refresh key and session cookie, we can make the needed POST request to get the first page of course data. To do this:
 1. Define an `async` function, say `getCourseData`, that calls the function you defined before to get the session cookie and browser refresh key and stores it in a variable. Since the function is `async`, use `await` here. Since you're returning an object, you may want to look up [destructuring assignment](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment#syntax) which allows you to write one-liners to define multiple variables for each property.
 2. Define a variable `bodyRequestData` whose value is in the above section (https://github.com/jschanker/csc3520-fall2022/edit/main/day1-9-8-22.md#inspection-of-requests-and-responses). Be sure to replace the `browserRefreshKey` to reference the variable that holds this value and remove the subject area CSC as we'll want to get the search results for every area. You might also want to replace `2022;FA` with a variable that holds this value, so it'll be easier to change in the future for other semesters. Look up [template literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals) to see a nice way to combine variable values and string literals without using string concatenation (`+`).
-3. Now make a POST request using axios. This time you'll be using `axios.post` but will need to pass it an object with the relevant properties. `url` is the request url, `data` will be `bodyRequestData`, and you'll also need `headers` which itself will be an object with properties `"content-type" : "multipart/form-data; boundary=----FormBoundary"` (the format of the request body, boundary is the separator between names of inputs and their values) and a property with a key of `cookie` whose value is 'ASP.NET_SessionId=' followed by whatever the session id is. This time, you'll use another `await` for the `axios` call and store it in `response`.
+3. Now make a POST request using `axios`. This time you'll use `axios` (no `axios.post` or `axios.get`) and pass it an object with the **three** relevant properties:
+  1. `url` is the request url, `method` is `"POST"`, 
+  2. `data` will be `bodyRequestData`, and 
+  3. `headers` which itself will be an object with properties `"content-type" : "multipart/form-data; boundary=----FormBoundary"` (the format of the request body, boundary is the separator between names of inputs and their values) and a property with a key of `cookie` whose value is 'ASP.NET_SessionId=' followed by whatever the session id is. 
+This time, you'll use another `await` for the `axios` call and store it in `response`.
 4. Start by logging the `data` of response to see if it worked. (You'll of course need to call your new `getCourseData` function. If you get the same HTML as with the GET request something went wrong. Otherwise, if you can see some courses listed after a little time, it worked.
-5. The next step is to parse the HTML as we did before to get the browser refresh key. Use the `parse` method of the `nodeHTMLParser` object as you did before.
-6. The relevant data is in the table. Manually make a request for the course data and inspect the course table to see if it has a unique id, so you could use `getElementById` as before.  You can log its `innerHTML` property to see if you get the table of course data.
-7. Next we'll want to get all of the table headings. This will make it so that we know which table cell corresponds to which piece of course data. This is important for making our scraper less fragile. For example, the third column might correspond to the course code now, but if columns are added or removed (as they have been in the past), it may not be that way in the future. To get all of the headings, you'll want to use `querySelectorAll` which will give you this data as an Array.
+5. The next step is to parse the HTML as we did before to get the browser refresh key. Use the <code>parse</code> method of the 1nodeHTMLParser` object as you did before.
+6. The relevant data is in the table. Go to Lions Den yourself and make a request for the course data and inspect the course table (using Inspect Element) to see if it has a unique id, so you could use `getElementById` as before. You can log its `innerHTML` property to see if you get the table of course data.
+7. Next we'll want to get all of the table headings. This will make it so that we know which table cell corresponds to which piece of course data. This is important for making our scraper less fragile. For example, the third column might correspond to the course code now, but if columns are added or removed (as they have been in the past), it may not be that way in the future. To get all of the headings, you'll want to use <a href="https://www.npmjs.com/package/node-html-parser#user-content-htmlelementqueryselectorallselector">`querySelectorAll('th')`</a> which will give you all of the <code>&lt;th&gt;</code> tags belonging to the table as an `Array`.&nbsp; <strong>IMPORTANT NOTE</strong>: The POST request to the Lions Den to search for courses sometimes fails. In this case getting the element by id will return <code>null</code> so calling <code>querySelectorAll</code> on it will crash the program. To prevent this, you can use the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Optional_chaining#try_it">optional chaining operator</a> by placing a question mark before each <code>.</code> when you're not sure if what comes before it will be <code>null</code> So, if you had an object referred to by <code>foo</code> that may or may not have a property <code>a</code>, you could use `foo.prop?.x` to "short-circuit" this property chain, resulting in `undefined` when there is no `prop` property on `foo` or whatever `foo.prop.x`, otherwise. The other option is to just put this in an `if` statement checking if `foo.prop != null` (this checks for `null` and `undefined`).
+8. If you get a non-<code>null</code> value for the element, calling <code>querySelectorAll</code> here will give you an <code>Array</code> of all the cells. For each cell you'll want to get the text. So let's use the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">`map`</a> method on the `Array` mapping each element to its <a href="https://github.com/taoqf/node-html-parser#htmlelementtext"><code>text</code></a> property.</li>
+9. Check to see if you see the Array of table headings. Since we'll want to make each of these property keys, let's use snake case (spaces replaced with underscores, all lowercase letters). So, add to the output of the function we provide to `map` by replacing all spaces with underscores (<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/replaceAll&lt;code&gt;replaceAll">replaceAll</a> or for better browser compatibility use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/replace#description">replace</a> with a RegEx with a <code>g</code> flag, with `g` standing for global). Then use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/toLowerCase"><code>toLowerCase</code></a>.
